# not_management

./: .env.dist  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  postcss.config.js  tailwind.config.js
.cargo/: config.toml
migrations/2023-10-31-195646_create_users/: up.sql
src/: app.rs  lib.rs  main.rs
src/models/: db.rs  mod.rs  schema.rs  user.rs
